// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar favorites action - behavior should cap display at MAX when number exceeds maximum 1`] = `
<FavoritesIconBadge
  favoritesCount={9999}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <ForwardRef(Typography)
    className="sg-1fzif63-root theme__tab-bar__favorites-icon-badge theme__badge"
    component="div"
    fontWeight="bold"
    variant="caption"
  >
    <div
      className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-5ld4iv-Typography-root-Typography-caption-Typography-fontWeightBold-root"
    >
      999+
    </div>
  </ForwardRef(Typography)>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action - behavior should show count when number is changed 1`] = `
<FavoritesIconBadge
  favoritesCount={99}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <ForwardRef(Typography)
    className="sg-1fzif63-root theme__tab-bar__favorites-icon-badge theme__badge"
    component="div"
    fontWeight="bold"
    variant="caption"
  >
    <div
      className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-5ld4iv-Typography-root-Typography-caption-Typography-fontWeightBold-root"
    >
      99
    </div>
  </ForwardRef(Typography)>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action should render exact number 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WithWidgetSettings(Connect(FavoritesIconBadge))>
    <Connect(FavoritesIconBadge)
      widgetSettings={{}}
    >
      <FavoritesIconBadge
        dispatch={[Function]}
        favoritesCount={1}
        showWishlistItemsCountBadge={true}
        widgetSettings={{}}
      >
        <ForwardRef(Typography)
          className="sg-1fzif63-root theme__tab-bar__favorites-icon-badge theme__badge"
          component="div"
          fontWeight="bold"
          variant="caption"
        >
          <div
            className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-5ld4iv-Typography-root-Typography-caption-Typography-fontWeightBold-root"
          >
            1
          </div>
        </ForwardRef(Typography)>
      </FavoritesIconBadge>
    </Connect(FavoritesIconBadge)>
  </WithWidgetSettings(Connect(FavoritesIconBadge))>
</Provider>
`;
